# Ram-Demand-Forecast

./: .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt
data/: ram_demand.csv
src/: app.py  features.py  generate_dataset.py  predict.py  train.py
static/: index.html
tests/: test_pipeline.py
